Content List linked to corresponding sections

--- a/Missing_Data_Methods_Comparison/missing_values.ipynb
+++ b/Missing_Data_Methods_Comparison/missing_values.ipynb
@@ -44,10 +44,13 @@
     "\n",
     "- Dataset is downloaded from the this [link](https://www.kaggle.com/competitions/home-data-for-ml-course/data)\n",
     "\n",
-    "1. Mean / Median / Mode Imputation\n",
-    "2. Forward Fill / Backward Fill\n",
-    "3. K-Nearest Neighbors (KNN) Imputation\n",
-    "4. Iterative Inpmputer"
+    "**<a id=\"content_list\">Content List:</a>**\n",
+    "\n",
+    "1. [Mean / Median / Mode Imputation](#mean_imputation)\n",
+    "2. [Random Values Imputation](#random_imputation)\n",
+    "3. [Forward Fill / Backward Fill](#forward_backword_imputation)\n",
+    "4. [K-Nearest Neighbors (KNN) Imputation](#knn_imputation)\n",
+    "5. [Multivariate Iterative Inpmputer](#iterative_imputation)"
    ]
   },
   {
@@ -987,7 +990,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **1. Mean / Median / Mode Imputation**<a id=\"simpleimputer_numerical\"></a>"
+    "##### **<a id=\"mean_imputation\">1. Mean / Median / Mode Imputation**</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Back to Content List](#content_list)"
    ]
   },
   {
@@ -2383,7 +2393,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **2. Random Values Imputation**"
+    "##### **<a id=\"random_imputation\">2. Random Values Imputation**</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Back to Content List](#content_list)"
    ]
   },
   {
@@ -2637,7 +2654,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **3. Forward Fill / Backward Fill Imputation**"
+    "##### **<a id=\"forward_backword_imputation\">3. Forward Fill / Backward Fill Imputation**</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Back to Content List](#content_list)"
    ]
   },
   {
@@ -2903,7 +2927,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **4. K-Nearest Neighbors (KNN) Imputation**"
+    "##### **<a id=\"knn_imputation\">4. K-Nearest Neighbors (KNN) Imputation**</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Back to Content List](#content_list)"
    ]
   },
   {
@@ -3176,7 +3207,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **5. Multivariate Iterative Imputation**"
+    "##### **<a id=\"iterative_imputation\">5. Multivariate Iterative Imputation**</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Back to Content List](#content_list)"
    ]
   },
   {
