--- a/Bank Churn Kaggle Competition/Bank_Churn_EDA_Prediction.ipynb
+++ b/Bank Churn Kaggle Competition/Bank_Churn_EDA_Prediction.ipynb
@@ -2313,7 +2313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> - **`CatBoostClassifier` performed little better than othan Classifiers.**"
+    "> - **`CatBoostClassifier` performed little better than othar Classifiers.**"
    ]
   },
   {
